fixed mobile overflow and favicon

--- a/src/sections/FeaturedProject/FeaturedProject.module.css
+++ b/src/sections/FeaturedProject/FeaturedProject.module.css
@@ -48,6 +48,7 @@
 .gallery {
   width: 100%;
   position: sticky;
+  min-width: 0%;
   top: 6rem;
 
   display: flex;
@@ -63,8 +64,8 @@
   display: block;
 
   width: 100%;
-  aspect-ratio: 16 / 9;
-
+  max-width: 100%;
+  height: auto;
   object-fit: cover;
 
   border-radius: var(--radius-lg);
@@ -87,7 +88,7 @@
 
   gap: var(--space-2);
 
-  min-width: 120px;
+  min-width: clamp(90px, 10vw, 100px);
 
   padding: var(--space-2);
 
@@ -112,7 +113,8 @@
   display: block;
 
   width: 100%;
-  aspect-ratio: 16 / 9;
+  max-width: 100%;
+  height: auto;
 
   object-fit: cover;
 
